# ntgm

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_VERIFICATION.md  LICENSE  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  requirements-mkdocs.txt  start-all.sh  start-web.sh  tsconfig.base.json
services/api/: .env.example  alembic.ini  pyproject.toml
services/api/app/: db.py  main.py  task_client.py  tasks.py
services/api/app/api/: router.py
services/api/app/core/: config.py
services/api/app/models/: __init__.py  advice_plan.py  intake_record.py  life_event.py  match_result.py  profile_change_log.py  push_dispatch_job.py  push_token.py  reminder.py  user.py
services/api/app/repositories/: advice_repository.py  asset_repository.py  intake_repository.py  job_repository.py  match_repository.py  profile_change_log_repository.py  profile_repository.py  push_dispatch_job_repository.py  push_token_repository.py  reminder_repository.py  user_repository.py
services/api/app/schemas/: advice.py  archive.py  event.py  match.py  profile.py  push.py  questionnaire.py  user.py
services/api/app/services/: advice_service.py  bazi_service.py  (+11 more)
services/api/migrations/: README.md  env.py
services/api/scripts/: seed_dev_data.py
services/api/tests/: conftest.py  test_advice_service.py  test_archive_service.py  test_bazi_service.py  test_coverage_boost.py  test_events_push_intake_routes.py  test_match_service.py  test_more_routes.py  test_profile_services.py  test_profile_workflow_service.py  test_push_backend.py  test_push_e2e.py  test_push_service.py  test_questionnaire_service.py  test_remaining_routes.py  test_remaining_routes_pt2.py  test_reminder_routes.py  test_routes_edge_cases.py  test_support_services.py  test_users_route.py
services/worker/: pyproject.toml
services/worker/app/: celery_app.py
(+131 files in other folders)
