[project]
name = "ntgm-api"
version = "0.1.0"
description = "NTGM FastAPI service"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
]

# Use Tsinghua mirror for faster downloads in China region
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uvicorn]
factory = false
