[project]
name = "ntgm-worker"
version = "0.1.0"
description = "NTGM Celery workers"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0",
  "redis>=5.0.0"
]

# Use Tsinghua mirror for faster downloads in China region
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
