[project]
name = "ntgm-worker"
version = "0.1.0"
description = "NTGM Celery workers"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.0.0",
  "python-json-logger>=2.0.0",
  "mediapipe>=0.10.14,<0.10.20",
  "opencv-python-headless>=4.10.0",
  "minio>=7.2.0",
]

# Use Tsinghua mirror for faster downloads in China region
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
